# sporact_base

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: apisec-scan.yml  bandit.yml  codeql.yml  pysa.yml  rust-clippy.yml  snyk-infrastructure.yml  snyk-security.yml
example_integration/: README.md  integration.json
example_integration/src/: example_action.py
example_integration/src/tests/: test_example_action.py
sporact_base/: create_integration.py  expression_functions.py  sporact_base_action.py
sporact_base/createintegration/: setup.py
sporact_base/createintegration/createintegration/: create_integration.py
sporact_base/tests/: test_action.py  test_expressions.py
